# ml-workspace

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  pre-commit  pre-push
coding-guidelines/: Dockerfile  Makefile  README.md  fork-exec-shell.cpp  fork-variables.cpp  run-shadowing.sh  shadowing.cpp
gpu-sandbox/: README.md  ec2.tf  ec2_biophys.tf  ec2_fpga.tf  ec2_ml.tf  efs.tf  gpu-setup.sh.tpl  iam.tf  main.tf  setup.ps1  setup.sh.tpl  setup_env_vars.sh  variables.tf  vpc.tf  windows-get-administrator-passwd.sh
gpu-sandbox/go-py-bindings/python/: Dockerfile  Makefile  README.md  build_certinfo.py  certinfo.c  certinfo.h  certinfo.py  cffi_certinfo.h  main.c  main.py  pyproject.toml
gpu-sandbox/neuro/intro-rnns/: 00-rnn-char-class.ipynb  README.md  model_eval.py  model_simple.py  pyproject.toml  run.py  train.py
gpu-sandbox/vision/: 000-workbench.ipynb  001-opencv-ops.ipynb  002-opencv-filters-and-noise.ipynb  003-convolutions-cross-correlations.ipynb  004-derivatives-and-edges.ipynb  005-houghs.ipynb  006-fourier.ipynb  007-geometry.ipynb  008-lucas-kanade.ipynb  010-kallman-filter.ipynb  015-ocr-ish.ipynb  README.md  pyproject.toml  script-vis-sliding-window.py
gpu-sandbox/vision/cnns/: digit-run.py  finetune-script-classify-mser.py  finetune-script-classify-on-window.py  finetune-svhn-run.py  finetune_model.py  model_eval.py  script-classify-on-window.py  svhn-goodfellow-2014.ipynb  svhn-intro.ipynb  svhn-negatives.ipynb  svhn-run.py  svhn-workbench.ipynb  svhn_script_deepcn_batchnorm.py  svhn_script_deepercn.py  svhn_script_digit_detector.py  svhn_script_even_deepercnn.py  svhn_script_multidigit.py  train.py  vgg-svhn-run.py  workbench.ipynb
pytube/: Dockerfile  (+2 more)
(+590 files in other folders)
