[tool.poetry]
name = "vision"
version = "0.1.0"
description = ""
authors = ["seafoodfry <99568361+seafoodfry@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
opencv-contrib-python = "^4.10.0.84"
jupyterlab = "^4.3.4"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
