[project]
name = "vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipympl>=0.9.6",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "opencv-contrib-python>=4.11.0.86",
    "scikit-image>=0.25.1",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
