[tool.poetry]
name = "pybindings"
version = "0.1.0"
description = ""
authors = ["seafoodfry <99568361+seafoodfry@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cffi = "^1.17.1"
setuptools = "^78.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
